# datafy-llm-workshop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: 01_LangChain_LLM_Models.ipynb  01_LiteLLM_Models.ipynb  01_OpenAI.ipynb  01_Why_finetuning_lab_student.ipynb  01_prompt_engineering.ipynb  02_LangChain_Memory.ipynb  02_Where_finetuning_fits_in_lab_student.ipynb  03_Instruction_tuning_lab_student.ipynb  03_LangChain_Chains.ipynb  04_Data_preparation_lab_student.ipynb  04_LangChain_Agents.ipynb  05_OpenAI.ipynb  05_Training_lab_student.ipynb  06_Evaluation_lab_student.ipynb  0_Preparing_setup_datafy_llm.ipynb
notebooks/chat-data/: 01_document_loading.ipynb  02_document_splitting.ipynb  03_vectorstores_and_embeddings.ipynb  04_retrieval.ipynb  05_question_answering.ipynb  06_chat.ipynb
notebooks/chat-data/docs/Notion_DB/: Blendle's Employee Handbook 55a805281bbe4415a16197e7f24dd498.md
notebooks/chat-data/docs/chroma/: chroma.sqlite3
notebooks/langchain/: L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  L3-Chains.ipynb  L4-QnA.ipynb  L5-Evaluation.ipynb  L6-Agents.ipynb
