[tool.poetry]
name = "dlai-langchain"
version = "0.0.1"
description = "A Project with learning resource on DLAI finetuning"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "dlai-langchain"}]

[tool.poetry.dependencies]
python = "^3.10"
# langchain =  {extras = ["docarray"], version = "0.0.213"}
langchain =  {extras = ["docarray"], version = "^0.0.279"}
jupyterlab = "^4.0.3"
python-dotenv = "^1.0.0"
datasets = "^2.14.4"
pandas = "^2.0.3"
accelerate = "^0.22.0"
openai = "^0.28.0"
tiktoken = "^0.4.0"
torch = ">=2.0.0, !=2.0.1"
wikipedia = "^1.4.0"
pypdf = "^3.15.5"
yt-dlp = "^2023.7.6"
pydub = "^0.25.1"
chromadb = "^0.4.8"
lark = "^1.1.7"
scikit-learn = "^1.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
