[tool.poetry]
name = "datafy-llm-workshop"
version = "0.0.1"
description = "A Project containing the datafy LLM Workshop"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "datafy-llm-workshop"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain =  {extras = ["docarray"], version = "^0.0.304"}
transformers = "^4.33.3"
jupyterlab = "^4.0.3"
python-dotenv = "^1.0.0"
datasets = "^2.14.4"
pandas = "^2.0.3"
accelerate = "^0.22.0"
openai = "^0.28.0"
tiktoken = "^0.4.0"
wikipedia = "^1.4.0"
litellm  = "^0.1.794"
aleph-alpha-client = "^3.5.1"
google-cloud-aiplatform = "^1.33.1"
ai21 = "^1.2.8"
ctransformers = "^0.2.27"
huggingface-hub = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
