[tool.poetry]
name = "datafy-llm-workshop"
version = "0.0.1"
description = "A Project containing the datafy LLM Workshop"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "datafy-llm-workshop"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.2.3"
transformers = "4.41.2"
jupyterlab = "^4.0.3"
python-dotenv = "^1.0.0"
datasets = "^2.14.4"
pandas = "^2.0.3"
accelerate = "^0.22.0"
openai = "1.34.0"
tiktoken = "0.7.0"
wikipedia = "1.4.0"
litellm  = "1.40.9"
aleph-alpha-client = "7.1.0"
google-cloud-aiplatform = "1.54.1"
ai21 = "2.5.0"
ctransformers = "0.2.27"
huggingface-hub = "0.23.3"
langchain-community = "0.2.4" 
langchain-openai = "0.1.8"
langchain-experimental = "0.0.60"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
